cmake_minimum_required(VERSION 3.29)
project(Cpp_STL_Learn)

set(CMAKE_CXX_STANDARD 20)

add_executable(Cpp_STL_Learn main.cpp
        HowToUseVector.h
        HowToUseString.h
        HowToUseDeque.h
        Player_Exercise.h
        HowToUseStack.h
        HowToUseQueue.h
        HowToUseList.h
        PersonSortExercise.h
        HowToUseSet.h
        HowToUsePair.h
        HowToUseMap.h
        Employer_Exercise.h
        HowToUseFunctor.h
        HowToUsePredicate.h
        HowToUseFunctorInSTL.h
        Algo_foreach.h
        Algo_search.h
        Algo_sort.h
)
